--- a/home/wiki/App/Xtn/Page_sync.html
+++ b/home/wiki/App/Xtn/Page_sync.html
@@ -106,7 +106,7 @@
       <span class="mw-headline" id="Options">Options</span>
     </h2>
     <p>
-      The options page is at <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_2" title="Options/Page sync" class="xowa-visited">Options/Page_sync</a>
+      The options page is at <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_2" title="Options/Page sync">Options/Page_sync</a>
     </p>
     <h2>
       <span class="mw-headline" id="Background">Background</span>
