--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -1216,7 +1216,7 @@
         (done) Menu: Added View commands for page_read, page_edit, page_html {requested by hidp123}.
       </li>
       <li>
-        (done) Options: "Clear customized options" link added {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_26" title="Options">Options</a>
+        (done) Options: "Clear customized options" link added {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_26" title="Options" class="xowa-visited">Options</a>
       </li>
       <li>
         (done) Offline files: Builder now generates a list of all thumbs to be downloaded. See: <a href="http://xowa.org/home/wiki/Dev/Design/Offline_files.html" id="xolnki_27" title="Dev/Design/Offline files">Dev/Design/Offline_files</a>
@@ -2016,7 +2016,7 @@
         (fix) syntaxhighlight and math tags should not allow raw javascript {detected by Schnark}
       </li>
       <li>
-        (add) Option to disable Javascript See <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_51" title="Options">Options</a>
+        (add) Option to disable Javascript See <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_51" title="Options" class="xowa-visited">Options</a>
       </li>
       <li>
         (add) Categories now display in MediaWiki format (Subcategories; Pages; Files); EX:http://en.wikipedia.org/wiki/Category:Terrestrial_planets {requested by Schnark}
