--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -2258,7 +2258,7 @@
         Html.Tidy: Limit tidy / JTidy to page content not entire page (affects one page being rendered incorrectly b/c tidy / JTidy incorrectly merges correct content with correct enclosing HTML). See: <a href="https://it.wikiquote.org/wiki/Indro_Montanelli" rel="nofollow" class="external free">https://it.wikiquote.org/wiki/Indro_Montanelli</a>
       </li>
       <li>
-        Html: Add &lt;xowa_html&gt; node to encapsulate &lt;style&gt; &lt;script&gt; in home wiki. See: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_44" title="Options">Options</a>
+        Html: Add &lt;xowa_html&gt; node to encapsulate &lt;style&gt; &lt;script&gt; in home wiki. See: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_44" title="Options" class="xowa-visited">Options</a>
       </li>
     </ul>
     <p>
@@ -2295,7 +2295,7 @@
     </p>
     <ul>
       <li>
-        Gui: Add default shortcut for Font Reset; EX:Ctrl + 0 {requested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_45" title="Options/Shortcuts">Options/Shortcuts</a>
+        Gui: Add default shortcut for Font Reset; EX:Ctrl + 0 {requested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_45" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </li>
     </ul>
     <p>
@@ -2551,7 +2551,7 @@
     </p>
     <ul>
       <li>
-        Gui: Support customizable keyboard shortcuts. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_55" title="Options/Shortcuts">Options/Shortcuts</a>
+        Gui: Support customizable keyboard shortcuts. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_55" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </li>
       <li>
         Gui: Update UI language dynamically (do not require restart). See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_56" title="Options/Language">Options/Language</a>
@@ -2611,7 +2611,7 @@
         Lang: Add lang codes for other minor languages; EX:akz; sxu; etc...
       </li>
       <li>
-        Xtns.Xowa_cmd: Do not double-parse content inside &lt;xowa_cmd&gt; (affects references showing up twice in XOWA home wiki). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_59" title="Options/Shortcuts">Options/Shortcuts</a>
+        Xtns.Xowa_cmd: Do not double-parse content inside &lt;xowa_cmd&gt; (affects references showing up twice in XOWA home wiki). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_59" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </li>
       <li>
         Log: Removed unused log messages. See: <a href="http://xowa.org/home/wiki/Special:XowaSystemData%3Ftype%3Dlog_session.html" id="xolnki_60" title="Special:XowaSystemData?type=log session">Special:XowaSystemData?type=log session</a>
@@ -2659,7 +2659,7 @@
         Html.Jtidy: Add Jtidy for fixing invalid HTML (currently optional; will become default). See: bin/any/java/jtidy/jtidy-r938.jar
       </li>
       <li>
-        Gui: Add Options page for Shortcuts (read-only). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_61" title="Options/Shortcuts">Options/Shortcuts</a>
+        Gui: Add Options page for Shortcuts (read-only). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_61" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </li>
       <li>
         Special.XowaSystemData: Add Special Page to show contents of session log and other files; EX:Menu -&gt; Help -&gt; System data.
@@ -2708,7 +2708,7 @@
         Javascript.Timeline: Remove &lt;timeline&gt; tag from within pre (affects timeline sometimes showing in black colors when jtidy is enabled); EX:old: &lt;pre&gt;&lt;timeline&gt;code&lt;/timeline&gt;&lt;/pre&gt;; new: &lt;pre&gt;code&lt;/pre&gt;. See: <a href="https://fr.wikipedia.org/wiki/Quimper" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Quimper</a>
       </li>
       <li>
-        Javascript.TableSorter: Sort by &lt;input&gt; if available; EX:bin/any/javascript/article-view/jquery.tablesorter.js. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_62" title="Options/Shortcuts">Options/Shortcuts</a>
+        Javascript.TableSorter: Sort by &lt;input&gt; if available; EX:bin/any/javascript/article-view/jquery.tablesorter.js. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_62" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </li>
       <li>
         Url: Escape &amp; for external links when using default view_web launcher of "cmd /c" on Windows; EX:cmd /c start "http://www.culture.gouv.fr/public/mistral/merimee_fr?ACTION=CHERCHER&amp;FIELD_1=REF&amp;VALUE_1=PA59000162". See: <a href="https://fr.wikipedia.org/wiki/Liste_des_monuments_historiques_du_Nord_%28A-L%29" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Liste_des_monuments_historiques_du_Nord_%28A-L%29</a>
@@ -3907,7 +3907,7 @@
         Import: Default cache to 100 MB max and 75 MB min. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_86" title="Options/Files" class="xowa-visited">Options/Files</a>
       </li>
       <li>
-        Options: Reorganize tab layout. See: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_87" title="Options">Options</a>
+        Options: Reorganize tab layout. See: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_87" title="Options" class="xowa-visited">Options</a>
       </li>
     </ul>
     <p>
@@ -4174,7 +4174,7 @@
         Url: Fix "zh.wikipedia.org" going to "zh.wikipedia.org/wiki/Main_Page" instead of "zh.wikipedia.org/wiki/Wikipedia:首页". [broken since:v1.1.3.1]
       </li>
       <li>
-        Url: Fix "/home/wiki/Main_Page" redirecting to "/home/wiki/home". See: <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_95" title="Main Page">Main_Page</a> [broken since:v1.2.2.1]
+        Url: Fix "/home/wiki/Main_Page" redirecting to "/home/wiki/home". See: <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_95" title="Main Page" class="xowa-visited">Main_Page</a> [broken since:v1.2.2.1]
       </li>
       <li>
         File.Offline: Show images from &lt;imageMap&gt;. See: <a href="https://en.wikipedia.org/wiki/Portal:Canada" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Portal:Canada</a> [broken since:v1.1.3.1]
