--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -303,7 +303,7 @@
     </dl>
     <ul>
       <li>
-        <b>Middle-click on link</b>: Open a tab in a new link by middle-clicking on it. Try middle-clicking the following: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_28" title="Options">Options</a>
+        <b>Middle-click on link</b>: Open a tab in a new link by middle-clicking on it. Try middle-clicking the following: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_28" title="Options" class="xowa-visited">Options</a>
       </li>
       <li>
         <b>Right-click</b>: Right click on an image and click save as file
@@ -379,7 +379,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_37" title="Options">Options</a>
+          <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_37" title="Options" class="xowa-visited">Options</a>
         </td>
         <td>
           Configure XOWA options
