--- a/home/wiki/Options/Category.html
+++ b/home/wiki/Options/Category.html
@@ -307,7 +307,7 @@ li.active a, li.active a:hover
               Missing category appearance: <sup id="cite_ref-missing_ctg_cls_0-0" class="reference"><a href="#cite_note-missing_ctg_cls-0">[1]</a></sup>
             </td>
             <td>
-              <select xowa_prop="app.ctg_mgr.missing_ctg_cls" xowa_prop_list="app.ctg_mgr.missing_ctg_cls_list" size="3" class="options_select" accesskey="d" id='xowa_prop_0'>
+              <select xowa_prop="app.ctg_mgr.missing_ctg_cls" xowa_prop_list="app.ctg_mgr.missing_ctg_cls_list" size="3" class="options_select" id='xowa_prop_0'>
                 <option value='normal'>
                   normal
                 </option>
