--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -1636,7 +1636,7 @@
     </p>
     <ul>
       <li>
-        Help: Remove "Setup ImageMagick / Inkscape" from Main_Page. See: <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_26" title="Main Page">Main_Page</a>
+        Help: Remove "Setup ImageMagick / Inkscape" from Main_Page. See: <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_26" title="Main Page" class="xowa-visited">Main_Page</a>
       </li>
       <li>
         Help: Add instructions for Maintaining wikis {detected by pirate}. See: <a href="http://xowa.org/home/wiki/App/Import/Maintenance.html" id="xolnki_27" title="App/Import/Maintenance">App/Import/Maintenance</a>
@@ -2086,7 +2086,7 @@
     </p>
     <ul>
       <li>
-        Options: Add Show keybinding {contributed by gnosygnu}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_41" title="Options/Shortcuts">Options/Shortcuts</a>
+        Options: Add Show keybinding {contributed by gnosygnu}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_41" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </li>
     </ul>
     <p>
