--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -263,7 +263,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-09-01
+          2016-10-01
         </td>
         <td class='cell_center'>
           2015-08-05
@@ -275,7 +275,7 @@
           sqlite3
         </td>
         <td class='cell_center'>
-          v2
+          v0
         </td>
         <td class='cell_center'>
           v1
@@ -292,7 +292,7 @@
       </tr>
       <tr>
         <td>
-          en.wikipedia.org_new
+          en.wikipedia.org_old
         </td>
         <td class='cell_center'>
           n
@@ -315,13 +315,13 @@
           v2
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikipedia.org_new")'>Import</button>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikipedia.org_old")'>Import</button>
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikipedia.org_new")'>Category</button>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikipedia.org_old")'>Category</button>
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikipedia.org_new")'>Search</button>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikipedia.org_old")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -357,6 +357,41 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikiquote.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          en.wiktionary.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-06-01
+        </td>
+        <td class='cell_center'>
+          2015-08-07
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v2
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wiktionary.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wiktionary.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wiktionary.org")'>Search</button>
         </td>
       </tr>
       <tr>
