--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -4026,7 +4026,7 @@
         Math: Note that MikTeX may fail to update images dynamically for first page {detected by William}.
       </li>
       <li>
-        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents">Help/Contents</a>
+        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents" class="xowa-visited">Help/Contents</a>
       </li>
     </ul>
     <p>
