--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -151,7 +151,7 @@
         </dl>
       </dd>
       <dd>
-        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
+        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents" class="xowa-visited">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
       </dd>
     </dl>
     <dl>
@@ -371,7 +371,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_36" title="Help/Contents">Contents</a>
+          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_36" title="Help/Contents" class="xowa-visited">Contents</a>
         </td>
         <td>
           View all help topics
